--- a/BattlestarGalactica/package.json
+++ b/BattlestarGalactica/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "q": "^1.5.1"
   }
 }
